initial UI changes related to skydive topology UI
Change-Id: Idc3f3de7d08b1a1ca25a27272036ad34952be051
Partial-Bug: #SOFTID-201
Signed-off-by: Sergey Glazyrin <s.glazyrin@partner.samsung.com>

--- a/statics/css/themes/light/skydive.css
+++ b/statics/css/themes/light/skydive.css
@@ -192,3 +192,25 @@ hr {
 .input-group-addon {
   color: black;
 }
+
+.impossible-to-build-hierarchy-topology {
+    justify-content: center;
+    font-weight: bold;
+    font-size: 20px;
+    min-height: 100%;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+.back-to-infrastructure-topology {
+    margin: 10px 0 0 10px;
+}
+.back-to-hosts-topology {
+    margin: 10px 0;
+    font-size: 24px;
+    cursor: pointer;
+}
+.layout-switcher {
+    margin-bottom: 10px;
+}
